<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_section1">种类1</string>
    <string name="title_section2">种类2</string>
    <string name="title_section3">种类3</string>
    <string name="action_example">Example action</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">超便利</string>
    <string name="action_settings">设置</string>
    <string name="register">注册</string>
    <string name="network_time_out">网络连接超时</string>
    <string name="retry">重试</string>
    <string name="network">网络</string>
    <string name="network_disconnect">网络已断开</string>
    
    <string name="addAddress">添加</string>
    
    <string name="login_error">身份验证失败，请确认输入的用户名和密码是否正确。</string>
    <string name="login_input_error_for_null">请输入用户ID和登录密码</string>
    <string name="login_input_network_error">无法访问OA服务器，请检查网络设置。</string>
    <string name="exit">退出</string>
    <string name="exit_message">是否退出？</string>
    <string name="note">提示</string>
    <string name="cancel">取消</string>
    <string name="no_sd_card">找不到SD卡</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入关键字</string>
    <string name="search_commodity">搜索商品</string>
    <string name="search_shop">店铺</string>

    <string-array name="good_category">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    
    
    <!-- ACCOUNT -->
    <string name="Register">注册</string>
    <string name="GetPassword">找回密码</string>
    <string name="GetPasswordSuccessful">登录密码重置为“123456”,请尽快登录修改密码</string>
    <string name="GetPasswordUserExist">用户不存在</string>
    <string name="login">登录</string>
    <string name="LoginNow">立即登录</string>
    <string name="ResetPwd">重置密码</string>
    <string name="RegisterNow">立即注册</string>
    <string name="password">密码：</string>
    <string name="AccountID">账号：</string>
    <string name="AccountOrder">我的订单</string>
    <string name="AccountAddress">我的地址</string>
	<string name="AccountFavorites">我的收藏</string>
	<string name="AccountBingPhone">绑定手机</string>
	<string name="AccountChangePwd">修改密码</string>
	<string name="AccountBalance">账户余额</string>
	<string name="AccountPoint">积分</string>
	<string name="HintUserId">邮箱地址/用户名/手机号</string>
	<string name="HintPassWord">请输入登录密码</string>
	<string name="RegisterHintUserPhone">输入手机号码</string>
	<string name="RegisterHintUserPwd">输入登录密码</string>
	<string name="RegisterHintUserPhoneCode">输入验证码</string>
	<string name="RegisterPhone">手机号码</string>
	<string name="RegisterPhonePwd">登录密码</string>
	<string name="RegisterPhoneCode">验&#160;&#160;证&#160;&#160;码</string>
	<string name="RegisterByPhone">手机注册</string>
	<string name="RegisterByEmail">邮箱注册</string>
	<string name="RegisterGetPhoneCode">获取</string>
	<string name="RegisterEmail">邮&#160;&#160;箱：</string>
	<string name="RegisterPwd">密&#160;&#160;码：</string>
	<string name="RegisterDisplayPwd">显示密码</string>
	<string name="RegisterAgreement">同意超便利服务协议</string>
	<string name="RegisterHintEmail">example@example.com</string>
	<string name="RegisterHintPwd">6&#8211;20字母，数字，符号</string>
	<string name="RegisterSuccessful">完成注册</string>
	<string name="RegisterIsDoing">提交用户信息</string>
	<string name="RegisterErrorPhoneExist">手机已经存在</string>
	<string name="RegisterErrorCodeInvalid">验证码无效</string>
	<string name="RegisterErrorInputWrongCode">输入验证码有误</string>
	
	<string name="ModifyPwdOldpwd">旧&#160;&#160;密&#160;&#160;码</string>
	<string name="ModifyPwdNewpwd">新&#160;&#160;密&#160;&#160;码</string>
	<string name="ModifyConfirmpwd">确认密码</string>
	<string name="ModifyHintInputOldpwd">输入旧密码</string>
	<string name="ModifyHintInputNewpwd">输入新密码</string>
	<string name="ModifyHintInputConfirmpwd">确认新密码</string>
	<string name="ModifyPassword">修改</string>
	<string name="ModifyPwdSuccessful">完成登录密码修改，请用新密码登录客户端</string>
	<string name="ModifyErrorPhoneNotExist">用户不存在</string>
	<string name="ModifyErrorOldWrong">旧密码错误</string>
	
	<!-- commodity -->
	<string name="price">价格</string>
	<string name="quantity">数量</string>
	
	<!-- Address -->
	<string name="edit">编辑</string>
	<string name="delete">删除</string>
	<string name="AddressName">收货人姓名</string>
	<string name="AddressPhone">手机号码</string>
	<string name="AddressProvince">省份</string>
	<string name="AddressCity">城市</string>
	<string name="AddressDistrice">县/区</string>
	<string name="AddressPostCode">邮政编码</string>
	<string name="AddressStreet">街道地址</string>
	<string name="HintName">输入收货人姓名</string>
	<string name="HintPhone">输入手机号</string>
	<string name="HintProince">选择省份</string>
	<string name="HintCity">选择城市</string>
	<string name="HintDistrict">选择县/区</string>
	<string name="HintPostcode">输入邮政编码</string>
	<string name="HintStreet">街道地址，不需要重复填写省市区</string>
	<string name="toast_login_text">请完善收货地址信息</string>
	
	<!-- CART -->
	<string name="CartEmpty">车子里神马也没有~也没有~没有~@-@</string>
	<string name="GoToShopping">去逛逛</string>
	<string name="GoToSettlement">去结算</string>
	<string name="CountOfGoods">商品数量:</string>
	<string name="TotalAmountDue">应付总额:</string>
	<string name="CartWarnLogin">您还没有登录，现在登录可以同步电脑和与手机购物车中的商品。</string>
	
	<!-- order -->
	<string name="SettleAccount">结算</string>
	<string name="SettleAddress">地址:</string>
	<string name="SettleAddNewAddress">添加新地址</string>
	<string name="SettlePhone">手机:</string>
	<string name="SettleName">收货人:</string>
	<string name="SettleAddressTitle">收货地址</string>
	<string name="PayMethod">支付方式</string>
	<string name="SettleGoodsTitle">商品信息</string>
	
	
	<!-- Action -->
	<string name="ActionShopList">com.yu.cvs.intent.ShopList</string>
	<string name="ActionShopView">com.yu.cvs.intent.ShopView</string>
	
	<string name="ActionCommodityList">com.yu.cvs.intent.CommodityList</string>
	<string name="ActionCommodityView">com.yu.cvs.intent.CommodityView</string>
	
</resources>