<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/rectangle_roundcorner_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/AccountID"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/AccoutId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/HintUserId"
                android:padding="5dip"
                android:text="luyi"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/DividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dip" 
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/AccoutPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/HintPassWord"
                android:inputType="textPassword"
                android:padding="5dip"
                android:text="111111"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/AccountLogin"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/LoginNow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="35dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/AccountGetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ResetPwd"
            android:textColor="#2b8aff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/AccountRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterNow"
            android:textColor="#2b8aff"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>