<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/rectangle_roundcorner_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/RegisterPhone"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/DividerColor" />

        <EditText
            android:id="@+id/AccountPhone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/RegisterHintUserPhone"
            android:inputType="phone"
            android:padding="10dip"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:src="@drawable/clear_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/rectangle_roundcorner_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/RegisterPhonePwd"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/DividerColor" />

        <EditText
            android:id="@+id/AccountPwd"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/RegisterHintUserPwd"
            android:inputType="textPassword"
            android:padding="10dip"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clear_pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dip"
            android:src="@drawable/clear_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/rectangle_roundcorner_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/RegisterPhoneCode"
            android:textSize="16sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="@color/DividerColor" />

        <EditText
            android:id="@+id/AccountCode"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/RegisterHintUserPhoneCode"
            android:inputType="number"
            android:padding="10dip"
            android:textSize="16sp" />

        <com.yu.cvs.myview.CountDownButton
            android:id="@+id/GetVerifyCode"
            style="@style/BaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/RegisterGetPhoneCode"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/PhoneRegister"
        style="@style/BaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:enabled="false"
        android:text="@string/Register" />

</LinearLayout>